--- a/index.html
+++ b/index.html
@@ -58,3 +58,15 @@
 
 </body>
 </html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pink heart.css" />
+    <title>Pink heart</title>
+  </head>
+  <body>
+    <!-- tiktok meowish -->
+    <canvas id="pinkboard"></canvas>
+    <script src="pink heart.js"></script>
+  </body>
+</html>
